--- a/vercel.json
+++ b/vercel.json
@@ -11,7 +11,7 @@
   ],
   "rewrites": [
     {
-      "source": "/(?!_next/static/|static/|favicon\\.ico|api(?:/.*)?$).*",
+      "source": "/((?!_next|static|favicon\\.ico|api).*)",
       "destination": "/index.html"
     }
   ],
